# wiii

./: .coderabbit.yaml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  read_docx.py
maritime-ai-service/: .dockerignore  .env.example  .env.production.example  .env.render.example  .gitattributes  .gitignore  =24.1.0  =6.0.0  CHANGELOG.md  Dockerfile  Dockerfile.prod  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.prod.yml  docker-compose.soul-agi.yml  docker-compose.yml  openapi_current.json  opensandbox.server.toml  pyproject.toml  render.yaml  requirements.txt  ruff.toml  start-local-backend.cmd  thinking-prompt-system-map.md
maritime-ai-service/.Codex/reports/: MULTI-AGENT-ARCHITECTURE-RESEARCH-2026-03-19.md  direct-core-pendulum-2026-03-29.json
maritime-ai-service/.claude/reports/: FULL_SYSTEM_AUDIT_2026-02-14.md  INDUSTRY_COMPARISON_2026-02-13.md  OPENAI-AGENTS-SDK-ROUTING-RESEARCH-2026-04-19.md  THINKING-QUALITY-ISSUE-EXPERT-CONSULT.md  sprint73-full-flow-test.md  sprint74-streaming-test.md
maritime-ai-service/alembic/: env.py
maritime-ai-service/alembic/versions/: 001_initial_schema.py  002_add_multimodal_columns.py  003_add_chunking_columns.py  004_add_sparse_search_support.py  005_add_chat_and_profile_columns.py  006_add_bounding_boxes_column.py  007_add_thread_views_and_user_preferences.py  008_add_organizations.py  009_add_users_and_identities.py  010_add_auth_method_to_refresh_tokens.py  011_add_org_id_data_isolation.py  012_character_tables_org_id.py  013_add_scheduler_failure_columns.py  (+34 more)
maritime-ai-service/app/: __init__.py  main.py  main_app_factory_support.py  main_runtime_contracts.py  main_runtime_support.py  main_shutdown_runtime.py  main_startup_runtime.py
maritime-ai-service/data/: .gitkeep
maritime-ai-service/docker/: opensandbox-browser.Dockerfile  opensandbox-python.Dockerfile
maritime-ai-service/docs/: LOCAL_DEV.md  test-sprint124-per-user-blocks.md
maritime-ai-service/nginx/: Dockerfile.prod  nginx.conf  nginx.conf.template
maritime-ai-service/postgres/: postgresql.conf
maritime-ai-service/scripts/: README.md  add_bounding_boxes.sql  analyze_s97_results.py  analyze_wiii_sync_stream_parity.py  audit_database.py  benchmark_embedding_retrieval_paths.py  benchmark_gemini_embeddings.py  benchmark_ollama_models.py  check_db.py  check_db_page_numbers.py  check_ingestion.py  debug_analyzer.py  debug_source_flow.py  enable_rls.py  eval_summary.py  find_untested.py  fix_database_schema.sql  ingest_full_pdf.py  ingest_local_full.py  local_demo_smoke.py  measure_iteration_time.py  ngrok_webhook.sh  plan_embedding_space_migration.py  probe_gemini_raw_thinking.py  probe_live_direct_session.py  probe_live_origin_math.py  probe_live_thinking_session.py  probe_promptloader_native_thinking.py  probe_shared_yaml_thinking.py  probe_wiii_golden_eval.py  reembed_legacy_embedding_rows.py  reingest_bounding_boxes.py  reingest_multimodal.py  reingest_with_chunking.py  render_embedding_strategy_recommendation.py  render_system_lifecycle_checkpoint.py  render_thinking_probe_html.py  replay_eval.py  run_local_dev.py  run_migration.py  (+78 more)
maritime-ai-service/tests/: README.md  __init__.py  conftest.py
wiii-desktop/src-tauri/: Cargo.toml  tauri.conf.json
(+2557 files in other folders)
