[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiii-service"
version = "0.1.0"
description = "Wiii - Multi-Domain Agentic RAG Platform with Long-term Memory by The Wiii Lab"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "The Wiii Lab"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # langchain meta + -openai/-google-genai/-ollama removed Phase 0 (drift).
    # langchain-core removed Phase 9c (2026-05-03) — replaced by native
    # app/engine/messages.py + messages_adapters.py + WiiiChatModel rewrite.
    # langgraph REMOVED (De-LangGraphing Phase 3) — replaced by WiiiRunner
    "google-genai>=1.66.0,<2.0.0",
    "opensandbox>=0.1.5,<0.2.0",
    "opensandbox-code-interpreter>=0.1.1,<0.2.0",
    "neo4j>=5.15.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "slowapi>=0.1.9",
    "xlsxwriter>=3.2.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*", "data*", "docker*", "nginx*", "alembic*", "backups*", "postgres*"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "integration: marks tests as integration tests (require real services like Neo4j, Google API)",
]
# Coverage settings
[tool.coverage.run]
source = ["app"]
omit = ["app/main.py", "*/migrations/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pass",
]

# Hypothesis settings for property-based testing
[tool.hypothesis]
profile = "dev"

[tool.hypothesis.profiles.dev]
max_examples = 50
deadline = 5000
